--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <link href="%PUBLIC_URL%/favicon.png" rel="shortcut icon"/>
     <meta content="width=device-width, initial-scale=1" name="viewport"/>
     <meta content="#000000" name="theme-color"/>
-    <meta content="Personal blog of Josep Vidal Vidal" name="vblogv"/>
+    <meta content="Personal blog of Josep Vidal Vidal" name="vvlog"/>
     <link href="logo192.png" rel="apple-touch-icon"/>
     <link href="%PUBLIC_URL%/manifest.json" rel="manifest"/>
     <!--
@@ -17,7 +17,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>vblogv 🔥 by Josep Vidal</title>
+    <title>vvlog 🔥 by Josep Vidal</title>
 </head>
 <body>
 <noscript>You need to enable JavaScript to run this app.</noscript>
