⛑ Added some tags to article

--- a/public/index.html
+++ b/public/index.html
@@ -7,8 +7,7 @@
     <meta content="Personal blog of Josep Vidal Vidal" name="vvlog"/>
     <link href="logo192.jpg" rel="apple-touch-icon"/>
     <link href="%PUBLIC_URL%/manifest.json" rel="manifest"/>
-
-    <title>vvlog 🔥 by Josep Vidal</title>
+    <title>vvlog 👨‍💻 Web development blog made by Josep Vidal</title>
 </head>
 <body>
 <noscript>You need to enable JavaScript to run this app.</noscript>
