--- a/public/index.html
+++ b/public/index.html
@@ -4,10 +4,11 @@
     <meta charset="utf-8"/>
     <meta content="width=device-width, initial-scale=1" name="viewport"/>
     <meta content="#000000" name="theme-color"/>
-    <meta content="Personal blog of Josep Vidal Vidal" name="vvlog"/>
     <link href="logo192.jpg" rel="apple-touch-icon"/>
+    <link rel="canonical" href="https://vvlog.dev/"/>
     <link href="%PUBLIC_URL%/manifest.json" rel="manifest"/>
-    <title>vvlog 👨‍💻 Web development blog made by Josep Vidal</title>
+
+    <title>VVLOG 👨‍💻 Web development blog</title>
 </head>
 <body>
 <noscript>You need to enable JavaScript to run this app.</noscript>
