🧲 Snap experiment failed, back to square 1

--- a/public/index.html
+++ b/public/index.html
@@ -7,8 +7,10 @@
     <link href="logo192.jpg" rel="apple-touch-icon"/>
     <link rel="canonical" href="https://vvlog.dev/"/>
     <link href="%PUBLIC_URL%/manifest.json" rel="manifest"/>
-
-    <title>VVLOG 👨‍💻 Web development blog</title>
+    <title>VVLOG ─ Multi language programming blog about, mostly, web dev.</title>
+    <meta property="og:image" content="%PUBLIC_URL%/logo-github.png"/>
+    <meta property="og:description" content="Learn JavaScript, React, Native, PHP, Yii2...">
+    <meta property="og:url" content="https://vvlog.dev/" />
 </head>
 <body>
 <noscript>You need to enable JavaScript to run this app.</noscript>
