🍤 Moving all the data to locale

--- a/public/index.html
+++ b/public/index.html
@@ -1,19 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="utf-8"/>
-    <meta content="width=device-width, initial-scale=1" name="viewport"/>
-    <meta content="#000000" name="theme-color"/>
-    <link href="logo192.jpg" rel="apple-touch-icon"/>
-    <link rel="canonical" href="https://vvlog.dev/"/>
-    <link href="%PUBLIC_URL%/manifest.json" rel="manifest"/>
+  <head>
+    <meta charset="utf-8" />
+    <meta content="width=device-width, initial-scale=1" name="viewport" />
+    <meta content="#000000" name="theme-color" />
+    <link href="logo192.jpg" rel="apple-touch-icon" />
+    <link rel="canonical" href="https://vvlog.dev/" />
+    <link href="%PUBLIC_URL%/manifest.json" rel="manifest" />
     <title>VVLOG ─ Multi language programming blog about, mostly, web dev.</title>
-    <meta property="og:image" content="%PUBLIC_URL%/logo-github.png"/>
-    <meta property="og:description" content="Learn JavaScript, React, Native, PHP, Yii2...">
+    <meta property="og:image" content="%PUBLIC_URL%/logo-github.png" />
+    <meta property="og:description" content="Learn JavaScript, React, Native, PHP, Yii2..." />
     <meta property="og:url" content="https://vvlog.dev/" />
-</head>
-<body>
-<noscript>You need to enable JavaScript to run this app.</noscript>
-<div id="root"></div>
-</body>
+  </head>
+  <body>
+    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <div id="root"></div>
+  </body>
 </html>
