🥗 Implemented most of article related data in local

--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta content="width=device-width, initial-scale=1" name="viewport" />
+    <link href="logo192.jpg" rel="shortcut icon" />
     <meta content="#000000" name="theme-color" />
     <link href="logo192.jpg" rel="apple-touch-icon" />
     <link rel="canonical" href="https://vvlog.dev/" />
